[package]
name = "sonoma-keygen"
version = "1.14.12"
description = "Sonoma key generation utility"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/convowork1/sonoma"
license = "Apache-2.0"
edition = "2021"

[dependencies]
bs58 = "0.4.0"
clap = { version = "3.1.5", features = ["cargo"] }
dirs-next = "2.0.0"
num_cpus = "1.13.1"
sonoma-clap-v3-utils = { path = "../clap-v3-utils", version = "=1.14.12" }
sonoma-cli-config = { path = "../cli-config", version = "=1.14.12" }
sonoma-remote-wallet = { path = "../remote-wallet", version = "=1.14.12" }
sonoma-sdk = { path = "../sdk", version = "=1.14.12" }
solana-version = { path = "../version", version = "=1.14.12" }
tiny-bip39 = "0.8.2"

[[bin]]
name = "sonoma-keygen"
path = "src/keygen.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
