[package]
name = "solana-compute-budget-program"
description = "Solana Compute Budget program"
version = "1.14.12"
homepage = "https://solana.com/"
documentation = "https://docs.rs/solana-compute-budget-program"
repository = "https://github.com/solana-labs/solana"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
sonoma-program-runtime = { path = "../../program-runtime", version = "=1.14.12" }
sonoma-sdk = { path = "../../sdk", version = "=1.14.12" }

[lib]
crate-type = ["lib"]
name = "solana_compute_budget_program"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
